--- a/public/cem.html
+++ b/public/cem.html
@@ -53,6 +53,88 @@
             color: var(--text-primary);
             overflow-x: hidden;
             position: relative;
+            padding-top: 50px;
+        }
+
+        .nav-bar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            background: rgba(10, 14, 23, 0.95);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
+            padding: 0 20px;
+            border-bottom: 1px solid rgba(6, 182, 212, 0.2);
+        }
+
+        .nav-bar-inner {
+            max-width: 1400px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 50px;
+        }
+
+        .nav-logo {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            text-decoration: none;
+            color: var(--text-primary);
+        }
+
+        .nav-logo-icon {
+            width: 32px;
+            height: 32px;
+            background: linear-gradient(135deg, var(--accent-cyan) 0%, var(--accent-emerald) 100%);
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 16px;
+        }
+
+        .nav-logo-text {
+            font-weight: 700;
+            font-size: 16px;
+            background: linear-gradient(135deg, var(--accent-cyan) 0%, var(--accent-emerald) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
+        .nav-links {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .nav-link {
+            padding: 6px 14px;
+            border-radius: 20px;
+            text-decoration: none;
+            font-size: 13px;
+            font-weight: 500;
+            transition: all 0.2s ease;
+            color: var(--text-secondary);
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid transparent;
+        }
+
+        .nav-link:hover {
+            background: rgba(6, 182, 212, 0.2);
+            color: var(--accent-cyan);
+            border-color: var(--accent-cyan);
+        }
+
+        .nav-link.active {
+            background: linear-gradient(135deg, var(--accent-cyan) 0%, var(--accent-emerald) 100%);
+            color: white;
         }
 
         body::before {
@@ -1020,6 +1102,21 @@
     </style>
 </head>
 <body>
+    <nav class="nav-bar">
+        <div class="nav-bar-inner">
+            <a href="/" class="nav-logo">
+                <div class="nav-logo-icon">🧪</div>
+                <span class="nav-logo-text">ZHR Blog</span>
+            </a>
+            <div class="nav-links">
+                <a href="/" class="nav-link">首页</a>
+                <a href="/eng.html" class="nav-link">英语</a>
+                <a href="/cem.html" class="nav-link active">化学</a>
+                <a href="/tang-poems.html" class="nav-link">唐诗</a>
+                <a href="/c-utils" class="nav-link">代码库</a>
+            </div>
+        </div>
+    </nav>
     <div class="particles" id="particles"></div>
 
     <div class="container">
