feat: 添加博客基础路径并更新导航链接
将博客部署到子路径'/blog'，更新所有页面导航链接以适配新的基础路径

--- a/public/cem.html
+++ b/public/cem.html
@@ -1104,16 +1104,16 @@
 <body>
     <nav class="nav-bar">
         <div class="nav-bar-inner">
-            <a href="/" class="nav-logo">
+            <a href="/blog/" class="nav-logo">
                 <div class="nav-logo-icon">🧪</div>
                 <span class="nav-logo-text">ZHR Blog</span>
             </a>
             <div class="nav-links">
-                <a href="/" class="nav-link">首页</a>
-                <a href="/eng.html" class="nav-link">英语</a>
-                <a href="/cem.html" class="nav-link active">化学</a>
-                <a href="/tang-poems.html" class="nav-link">唐诗</a>
-                <a href="/c-utils" class="nav-link">代码库</a>
+                <a href="/blog/" class="nav-link">首页</a>
+                <a href="/blog/eng.html" class="nav-link">英语</a>
+                <a href="/blog/cem.html" class="nav-link active">化学</a>
+                <a href="/blog/tang-poems.html" class="nav-link">唐诗</a>
+                <a href="/blog/c-utils" class="nav-link">代码库</a>
             </div>
         </div>
     </nav>
